--- a/MainBit.Utility.csproj
+++ b/MainBit.Utility.csproj
@@ -110,6 +110,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Helpers\StringExtensions.cs" />
     <Compile Include="Projections\Providers\Filters\ContentIdFilter.cs" />
     <Compile Include="Projections\Providers\Filters\ContainerIdFilter.cs" />
     <Compile Include="Rules\PartRuleProvider.cs" />
