--- a/MainBit.Utility.csproj
+++ b/MainBit.Utility.csproj
@@ -85,6 +85,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\CurrentContentAccessor.cs" />
     <Compile Include="Services\ICurrentContentAccessor.cs" />
   </ItemGroup>
   <ItemGroup />
